# Caribbean-Coastal-Resilience

./: README.md  pyproject.toml
.github/workflows/: daily-update.yml
docs/: season-history.csv  storm-tracker.md
examples/: jamaica_assessment.py
scripts/: daily_update.py
src/ccr/: __init__.py  islands.py
src/ccr/hazards/: rainfall.py  sea_level.py  surge.py
src/ccr/risk/: assessment.py  compound.py
src/ccr/vulnerability/: damage_curves.py
tests/: test_assessment.py  test_compound.py  test_surge.py
